# nvml_pub

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example_nvml_pub.conf  nvml_pub.c  nvml_pub.py  nvml_pub.service  requirements.txt
cmake/: FindIniparser.cmake
